# agent-shield

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
docs/: brd.md  data-model.md  infrastructure.md  payment-architecture.md  prerequisites.md  revenue-thesis.md  roadmap.md  synthesis.md  tech-architecture.md  ux-journey.md
docs/case-study/: 2026-04-25-real-world-calibration.md
docs/rules-design/: round1-architecture.md  round1-contributor-dx.md  round1-rule-schema.md  round1-rust-engine.md  round2-critic-coherence.md  round2-critic-future.md  round2-critic-strategy.md  round3-synthesis.md
fixtures/crewai-tools/: main.py
fixtures/empty/: README.md
fixtures/false-positive-trap/: real_estate_agent.py  user_agent_string.ts
fixtures/langchain-basic/: main.py
fixtures/mcp-server/: mcp.json  server.ts
fixtures/mixed/: langchain_part.py  openai_part.py
rules/builtin/: anthropic-agent-sdk.yaml  anthropic-mcp.yaml  autogen.yaml  aws-bedrock.yaml  crewai.yaml  custom-agent.yaml  langchain.yaml  langgraph.yaml  openai-assistants.yaml  vercel-ai.yaml
rules/scoring/: data-access-broad.yaml  empty-tools.yaml  excessive-admin-permission.yaml  excessive-exec-permission.yaml  missing-audit-trail.yaml  (+6 more)
scripts/: snapshot.sh
site/: all.html  dashboard.html  index.html  pricing.html
snapshots/: crewai-tools.json  empty.json  langchain-basic.json  mcp-server.json  mixed.json
src/: frameworks.rs  main.rs  report.rs  scanner.rs  scoring.rs  signals.rs
(+19 files in other folders)
